Fix #2246 : modify the layermanager partial to allow selection of timestamps on firefox and IE mobile

--- a/src/components/layermanager/style/layermanager.less
+++ b/src/components/layermanager/style/layermanager.less
@@ -97,20 +97,25 @@
     }
 
     .ga-layer-time {
+      position: absolute;
       top: 6px;
       right: 1.7em;
       width: 4em;
       height: 17px;
 
-      select {
+      select, button {
         position: absolute;
         top: 0px;
         left: 0px;
-        width: 110%; /* 10% more for the Android tablet */
+        width: 100%;
         height: 100%;
         padding: 0px;
         margin: 0px;
         line-height: 1.6em;
+      }
+
+      select {
+        width: 110%; /* 10% more for the Android tablet */
         opacity: 0;
       }
  
